<resources>
    <string name="app_name">JamCam</string>
    <string name="logo">logo</string>

    <!--Main activity-->
    <string name="new_match">NEW MATCH</string>
    <string name="replays">REPLAYS</string>
    <string name="manage">MANAGE</string>
    <string name="settings">SETTINGS</string>
    <string name="logo_description">Basketball logo</string>


    <!--Pregame activity-->
    <string name="pregame_title">Pre-match preparation</string>
    <string name="pregame_subtitle">Adjust settings before starting the match</string>
    <string name="match_description">What match are you watching?</string>
    <string name="match_place">Click to change place…</string>
    <string name="start_match">Start match</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number">Number</string>
    <string name="add_player">Add player</string>
    <string name="add_players">Add some players</string>
    <string name="match_length">Match length</string>

    <!--Match Activity-->
    <string name="last_plays">Last plays</string>
    <string name="one_pointer">+1</string>
    <string name="two_pointer">+2</string>
    <string name="three_pointer">+3</string>
    <string name="assist">Assist</string>
    <string name="rebound">Rebound</string>
    <string name="steal">Steal</string>
    <string name="block">Block</string>
    <string name="foul">Foul</string>
    <string name="end_match">End \nMatch</string>
    <string name="undo">Undo</string>
    <string name="question_scored">Did the player score?</string>
    <string name="scored">Yes</string>
    <string name="missed">No</string>
    <string name="share_video">Share replay!</string>
    <string name="loading">Processing the videos…</string>
    <string name="content_description">basketball progress bar</string>

    <!--Settings Activity-->
    <string name="settings_title">Settings</string>
    <string name="save_settings">Save your settings</string>
    <string name="select_length">Highlight length</string>
    <string name="select_type">Types of highlights to save</string>
    <string name="second">s</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="location_address">LOCATION ADDRESS</string>

    <!---Manage Activity-->
    <string name="manage_title">Manage Games</string>
    <string name="all_matches">Here are all your games</string>
    <string name="click_to_see">Click a match to see details</string>
    <string name="back">Back</string>

    <!---Match Details Activity-->
    <string name="match_details_title">Manage Games</string>
    <string name="stats">Here are the key statistics from</string>
    <string name="watch_highlights">Watch highlights from the match</string>


</resources>